hooks, including initial code for server-side hooks.  A number of bugs have
been fixed, particularly in interoperability between different formats or
different releases of Bazaar over there network.  There's been substantial
internal work in both the repository and network code to enable new features
and faster performance.



bzr 1.4rc2 2008-04-21
---------------------

  BUG FIXES:

    * ``bzr log -r ..X bzr://`` was failing, because it was getting a request
      for ``revision_id=None`` which was not a string.
      (John Arbash Meinel, #211661)

    * Fixed a bug in handling ghost revisions when logging changes in a 
      particular file.  (John Arbash Meinel, #209948)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #205156)

    * Fixed performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)


bzr 1.4rc1 2008-04-11
---------------------

  NOTES WHEN UPGRADING:

  CHANGES:

   * bzr main script cannot be imported (Benjamin Peterson)

   * On Linux bzr additionally looks for plugins in arch-independent site
     directory. (Toshio Kuratomi)

   * The ``set_rh`` branch hook is now deprecated. Please migrate
     any plugins using this hook to use an alternative, e.g.
     ``post_change_branch_tip``. (Ian Clatworthy)

   * When a plugin cannot be loaded as the file path is not a valid
     python module name bzr will now strip a ``bzr_`` prefix from the
     front of the suggested name, as many plugins (e.g. bzr-svn)
     want to be installed without this prefix. It is a common mistake
     to have a folder named "bzr-svn" for that plugin, especially